# s7codec

./: CMakeLists.txt  LICENSE  README.md
include/s7codec/: codec.hpp  datetime.hpp  endian.hpp  opcua_types.hpp  s7.hpp  string.hpp  types.hpp
tests/: db_memory_alignement.cpp  simple.cpp
